# docker-sample

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.jupyter  constraints.txt  docker-compose.yml  jupyter_lab_config.py  pyproject.toml  readme.md  requirements.txt  setup-jupyter-kernel.sh  start_jupyter.sh
notebooks/: sample_analysis.ipynb
src/demo/: __init__.py  utils.py
src/demo/defs/: __init__.py
src/demo/defs/assets/: demo.py
src/demo/defs/io_managers/: __init__.py  parquet.py
src/demo/defs/resources/: mysql.py  snowflake.py
