[project]
name = "demo"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.6",
    "dagster-webserver",
    "fastparquet",
    "ipywidgets",
    "jupyterlab",
    "langchain==0.3.27", 
    "langchain-core==0.3.74",
    "langchain-community==0.3.27",
    "langchain_openai==0.3.31",
    "langsmith==0.4.16",
    "langchain-text-splitters==0.3.9", 
    "lifelines", 
    "matplotlib",
    "mysql-connector-python",
    "numpy==1.26.4", 
    "networkx==3.5",
    "notebook",
    "openpyxl", 
    "pandas",
    "pmdarima==2.0.4",
    "plotly",
    "pyarrow",
    "scipy", 
    "seaborn",
    "snowflake-connector-python",
    "sqlalchemy",
    "statsmodels==0.14.5"
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "demo"
registry_modules = [
    "demo.components.*",
]


